Fixed bug that caused contact page to cut off links to linkedIn and github due to not enough padding when the page height was reduced past a certain point.

--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,7 @@ a:hover {
   color: black;
 }
 
+
 .body-link:hover {
   cursor: pointer;
   color: var(--cinnamon);
@@ -344,6 +345,7 @@ img {
 
 @media screen and (min-width: 768px) {
   body {
+    padding-bottom: 100px;
     width: 100%;
   }
 
